Firebase google sign out was improved.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="dialog_word">Word</string>
     <string name="dialog_definition">Definition</string>
     <string name="google_sign_in">Sign in</string>
-    <string name="log_out">Log out</string>
+    <string name="log_out">Sign out</string>
+    <string name="profile">Profile</string>
 </resources>
