--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="google_sign_in">Sign in</string>
     <string name="log_out">Sign out</string>
     <string name="profile">Profile</string>
+    <string name="close">Close</string>
 </resources>
